# SeaSegmentation

./: -stock-photo-aerial-boat-on-the-lake.ppm  BoW.cpp  CMakeLists.txt  Performances  README.md  blue-boat-freedom-horizon-ocean-2878.ppm  blue-boat-freedom-horizon-ocean-84588.ppm  boat-ferry-departure-crossing-sea-2733061.ppm  dictionary.300.yml  dictionary.best.yml  dictionary.emptyzeros.yml  dictionary.nosky.yml  dictionary.yml  dictionary200.yml  inline_image_preview.ppm  istockphoto-1203925445-170667a.ppm  main.cpp  oil-tankers-supertankers-oil-tankers-336718.ppm  svm.300.yml  svm.best.yml  svm.emptyzeros.yml  svm.nolbp.yml  svm.nosky.yml  svm.yml  svm200.yml  test_input.ppm  unnamed.ppm
classes/BagOfWords/: BagOfWords.cpp  BagOfWords.h  CMakeLists.txt
classes/FeatureExtractor/: CMakeLists.txt  FeatureExtractor.h
classes/ImageLoader/: CMakeLists.txt
classes/SemanticSegmentor/: CMakeLists.txt  SemanticSegmentor.cpp  SemanticSegmentor.h
imbuff/: convertTest.ppm
include/: BagOfWords.h  FeatureExtractor.h  Loader.h  SemanticSegmentor.h  imutil.h  segment-graph.h  segment-image.h
interfaces/: BagOfWords.h  FeatureExtractor.h  Loader.cpp  Loader.h
libs/graph-segmentation/: CMakeLists.txt  imutil.h  segment-image.h
libs/lbp/: CMakeLists.txt  LocalBinaryPattern.cpp  histogram.cpp  histogram.hpp  lbp  lbp.cpp  lbp.hpp
srcs/: BagOfWords.cpp  Extractor.cpp  GraphSegmentation.cpp  Loader.cpp  SemanticSegmentor.cpp
test/ground_truth/: Webp.net-resizeimage.jpg___fuse.png~
